# ddns

./: Cargo.toml  README.md
.github/: pull.yml
.github/workflows/: image.yml
src/: config.rs  docker.rs  main.rs  pp.rs  proxmox.rs  technitium.rs  updater.rs
